<resources>
    <string name="app_name">Food Delivery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="signUp">Sign Up</string>
    <string name="notMember">Don\'t have an account? Sign Up</string>
    <string name="send">Send</string>
    <string name="alreadyMember">Already have an account? Sign In</string>
    <string name="username">Username</string>
    <string name="mobileNumber">Mobile Number</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Settings</string>
    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="notificationEnable">Notification Enable</string>
    <string name="darkMode">Dark Mode</string>
    <string name="resetPassword">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="feedback">Share you Feedback</string>
    <string name="title_cart">Cart</string>
    <string name="emptyCart">Your cart is empty</string>
    <string name="addSomething">Add something in cart</string>
    <string name="proceedToPayment">Proceed to Payment</string>
    <string name="item">ITEMS</string>
    <string name="qty">QTY</string>
    <string name="amount">PRICE</string>
    <string name="totalAmount">Total Amount</string>
    <string name="addPromoCode">Add Promo Code</string>
    <string name="apply">Apply</string>
</resources>