<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.demoapp.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.demoapp.fragments.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/cart_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.demoapp.fragments.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/setting_fragment" />
</navigation>