<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <androidx.appcompat.widget.SwitchCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_12ssp"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@color/white"
         android:padding="@dimen/_10sdp"
         android:text="@string/notificationEnable"/>

     <androidx.appcompat.widget.SwitchCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_12ssp"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@color/white"
         android:padding="@dimen/_10sdp"
         android:text="@string/darkMode"/>


     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_12ssp"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@color/white"
         android:gravity="center"
         android:textAllCaps="false"
         android:padding="@dimen/_10sdp"
         android:text="@string/resetPassword"/>

     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_12ssp"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@color/white"
         android:gravity="center"
         android:textAllCaps="false"
         android:padding="@dimen/_10sdp"
         android:text="@string/feedback"/>

     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_12ssp"
         android:layout_marginTop="@dimen/_30sdp"
         android:layout_marginBottom="@dimen/_30sdp"
         android:background="@color/white"
         android:textAllCaps="false"
         android:gravity="center"
         android:padding="@dimen/_10sdp"
         android:text="@string/logout"/>

 </LinearLayout>
</ScrollView>