<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.demoapp.viewModels.ViewCartViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/toolbar"/>

        <TextView
            android:id="@+id/tvViewCartItem"
            style="@style/headerText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.60"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_width="0dp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/item"/>
        <TextView
            android:id="@+id/tvViewCartQty"
            style="@style/headerText"
            app:layout_constraintLeft_toRightOf="@+id/tvViewCartItem"
            app:layout_constraintWidth_percent="0.20"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_width="0dp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/qty"/>
        <TextView
            style="@style/headerText"
            app:layout_constraintWidth_percent="0.20"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_width="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/amount"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvViewCartList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adapter="@{viewModel.getViewCartAdapter()}"
            app:layout_constraintTop_toBottomOf="@+id/tvViewCartQty"
           />

        <EditText
            android:id="@+id/etViewCartPromoCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.70"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/addPromoCode"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@+id/rvViewCartList"/>
        <TextView
            android:id="@+id/tvViewCartPromoCodeApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.30"
            app:layout_constraintBottom_toBottomOf="@+id/etViewCartPromoCode"
            android:hint="@string/apply"
           android:layout_marginLeft="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:padding="@dimen/_10ssp"
            android:background="@drawable/border"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etViewCartPromoCode"/>
        <View
            android:id="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/tvViewCartPromoCodeApply"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorAccent"/>

        <TextView
        android:id="@+id/rvViewCartTotal"
        style="@style/headerText"
        android:text="@string/totalAmount"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:gravity="right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.60"
        android:layout_margin="@dimen/_10ssp"/>

        <TextView
            android:id="@+id/rvViewCartTotalAmount"
            style="@style/headerText"
            android:text="500"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:gravity="right"
            app:layout_constraintLeft_toRightOf="@+id/rvViewCartTotal"
           app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.35"
            android:layout_margin="@dimen/_10ssp"/>
        <Button
            android:id="@+id/btnViewCartProceedToPay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorPrimary"
            android:text="@string/proceedToPayment"
            android:textColor="@color/white"
            android:textAllCaps="false"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>