<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.demoapp.viewModels.ForgotPasswordViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/_10sdp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.email}"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnForgotEmail"
            style="@style/roundButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/send"
            android:onClick="@{viewModel::btnSendForgotPasswordListener}"
            app:layout_constraintTop_toBottomOf="@+id/tiForgotEmail"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="@dimen/_10sdp"
          app:layout_constraintTop_toBottomOf="@+id/btnForgotEmail">
          <TextView
              android:id="@+id/tvAlreadyMember"
              style="@style/textSize_small"
              android:text="@string/alreadyMember"/>
          <TextView
              android:id="@+id/tvForgotLogin"
              android:textColor="@color/colorPrimary"
              style="@style/textSize_small"
              android:onClick="@{viewModel::loginListener}"
              android:text="@string/login"/>
      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>